- Added trade bias as a formal training parameter - Cleanup and logging improvements in traderNode